# meiboTool

./: .gitignore  CLAUDE.md  build.spec  config.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-release.yml
docs/: ROADMAP.md  SPEC.md  TEMPLATE_GUIDE.md  スズキ校務_レイアウト帳票一覧.md  名簿帳票ツール_アーキテクチャガイド.docx  名簿帳票ツール_要件定義書_v2.1.docx
installer/: generate_manifest.py  setup.iss
meibo_tool/: main.py
meibo_tool/core/: config.py  crypto.py  data_model.py  data_sync.py  exporter.py  generator.py  importer.py  lay_parser.py  lay_renderer.py  lay_serializer.py  layout_registry.py  mapper.py  photo_manager.py  special_needs.py  updater.py  win_printer.py
meibo_tool/gui/: app.py  preview_renderer.py
meibo_tool/resources/: default_layouts.lay
テンプレート/: サンプル_名札.xlsx  ラベル_大2.xlsx  ラベル_小.xlsx  ラベル_特大.xlsx  ラベル_色付き.xlsx  修了台帳.xlsx  卒業台帳.xlsx  名札_1年生用.xlsx  名札_装飾あり.xlsx  名札_通常.xlsx  学級編成用個票.xlsx  家庭調査票.xlsx  掲示用名列表.xlsx  横名簿.xlsx  男女一覧.xlsx  縦一週間.xlsx  調べ表.xlsx
レイアウト/: 1nen.json  takara_simei.json  takara_simei_furi.json  takara_simei_hira.json  takara_sirabe.json  takara_sirabe_hira.json  【天久小】1年生用机ラベル.json  【天久小】はがき宛名（暑中・年賀）.json  【天久小】修了台帳.json  【天久小】写真ラベル（名前なし）.json  【天久小】写真名簿（名前なし）.json  【天久小】卒業台帳.json  【天久小】卒業台帳ラベル（※削除しない※）.json  【天久小】学年名簿（５０音）.json  【天久小】学級名簿　連絡先一覧（引き渡し使用）.json  【天久小】学級編成用個票.json  【天久小】家庭調査票.json  【天久小】掲示用名列表.json  【天久小】掲示用名列表（ひらがな）.json  【天久小】掲示用名列表（ふりがな付き）.json  【天久小】机用氏名ラベル.json  【天久小】机用氏名ラベル2.json  【天久小】職員用教室掲示.json  【天久小】調べ表.json  【天久小】調べ表（ひらがな）.json  【安岡中】学級編成個票.json  【次年度学級】複数学級名列表.json
(+74 files in other folders)
