[project]
name = "meibo-tool"
version = "1.0.0"
requires-python = ">=3.10"
description = "那覇市立小中学校向け名簿帳票自動生成ツール"

[tool.pytest.ini_options]
# プロジェクトルートから pytest を実行できるようにする
# → sys.path ハックは不要。各テストファイルで import core.xxx が直接使える
pythonpath = ["meibo_tool"]
testpaths = ["meibo_tool/tests"]
# テスト出力設定
addopts = "-v --tb=short"

[tool.ruff]
# 対象ファイル
src = ["meibo_tool"]
line-length = 100
target-version = "py310"
exclude = ["venv", ".venv", "dist", "build", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (未使用import・未定義変数など)
    "I",   # isort (import順序)
    "UP",  # pyupgrade (Python バージョン対応)
    "B",   # flake8-bugbear (よくあるバグパターン)
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-length は ruff format に任せる
    "B904",  # raise from None を強制しない
]

[tool.ruff.lint.per-file-ignores]
# テストファイルは assert を許可・import順の厳密チェックを緩和
"meibo_tool/tests/*" = ["S101"]
